[gd_scene load_steps=55 format=3 uid="uid://crrxc8i2tldfx"]

[ext_resource type="Texture2D" uid="uid://buje44ctj60xt" path="res://Assets/Main Characters/Battery/run.png" id="1_382qp"]
[ext_resource type="Script" path="res://Scenes/Camera2D.gd" id="1_lk56t"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_r6tt5"]
[ext_resource type="Texture2D" uid="uid://cgyuf2qw27xjp" path="res://Assets/Main Characters/Battery/idle.png" id="2_ce86f"]
[ext_resource type="Texture2D" uid="uid://c0uyuuyy4de6" path="res://Assets/Main Characters/Battery/falling.png" id="3_dptbq"]
[ext_resource type="Texture2D" uid="uid://c3hyqyh3sj53q" path="res://Assets/Main Characters/Battery/slam.png" id="4_kviws"]
[ext_resource type="Texture2D" uid="uid://dyfvu3axx1emx" path="res://Assets/Main Characters/Battery/double.png" id="6_3di1m"]
[ext_resource type="Texture2D" uid="uid://bj35rwlcrnnbb" path="res://Assets/Main Characters/Battery/dash.png" id="8_k4lgs"]
[ext_resource type="Texture2D" uid="uid://bmmhmkay080or" path="res://Assets/Main Characters/Battery/whip.png" id="9_fsyij"]
[ext_resource type="Script" path="res://Scenes/Attacks/Sword.gd" id="10_qfk5p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pj7jh"]
size = Vector2(6.00017, 14)

[sub_resource type="Animation" id="Animation_erpie"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_382qp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ponytail/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ht313"]
resource_name = "dash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_k4lgs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bvjej"]
resource_name = "double"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_3di1m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_q5586"]
resource_name = "fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_dptbq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ntao1"]
resource_name = "idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ce86f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_87775"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_382qp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ehkax"]
resource_name = "running"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_382qp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_p544l"]
resource_name = "slam"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_kviws")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_v8fmj"]
resource_name = "whip"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_fsyij")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ponytail/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uc18g"]
_data = {
"RESET": SubResource("Animation_erpie"),
"dash": SubResource("Animation_ht313"),
"double": SubResource("Animation_bvjej"),
"fall": SubResource("Animation_q5586"),
"idle": SubResource("Animation_ntao1"),
"jump": SubResource("Animation_87775"),
"running": SubResource("Animation_ehkax"),
"slam": SubResource("Animation_p544l"),
"whip": SubResource("Animation_v8fmj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l5we0"]
animation = &"double"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8sbqa"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o5mbo"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ja7et"]
animation = &"slam"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c6xls"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pe06m"]
advance_mode = 2
advance_condition = &"falling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ibdk1"]
advance_mode = 2
advance_condition = &"slam"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5e34y"]
advance_mode = 2
advance_condition = &"slam"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kc4fg"]
advance_mode = 2
advance_condition = &"is_double"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d5koi"]
advance_mode = 2
advance_condition = &"is_double"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qklbg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qhcyd"]
states/double/node = SubResource("AnimationNodeAnimation_l5we0")
states/double/position = Vector2(366, -10)
states/fall/node = SubResource("AnimationNodeAnimation_8sbqa")
states/fall/position = Vector2(422, 100)
states/jump/node = SubResource("AnimationNodeAnimation_o5mbo")
states/jump/position = Vector2(306, 100)
states/slam/node = SubResource("AnimationNodeAnimation_ja7et")
states/slam/position = Vector2(366, 163)
transitions = ["Start", "jump", SubResource("AnimationNodeStateMachineTransition_c6xls"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_pe06m"), "jump", "slam", SubResource("AnimationNodeStateMachineTransition_ibdk1"), "fall", "slam", SubResource("AnimationNodeStateMachineTransition_5e34y"), "jump", "double", SubResource("AnimationNodeStateMachineTransition_kc4fg"), "fall", "double", SubResource("AnimationNodeStateMachineTransition_d5koi"), "double", "fall", SubResource("AnimationNodeStateMachineTransition_qklbg")]
graph_offset = Vector2(-63, 32)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xs303"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yfap0"]
animation = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7kthr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_puyd5"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wypyk"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_63t8k"]
state_machine_type = 1
states/idle/node = SubResource("AnimationNodeAnimation_xs303")
states/idle/position = Vector2(330, 100)
states/running/node = SubResource("AnimationNodeAnimation_yfap0")
states/running/position = Vector2(475, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_7kthr"), "idle", "running", SubResource("AnimationNodeStateMachineTransition_puyd5"), "running", "idle", SubResource("AnimationNodeStateMachineTransition_wypyk")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lkh0t"]
animation = &"whip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rmt7y"]
animation = &"dash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ai21q"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t0vck"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5bi8q"]
advance_mode = 2
advance_condition = &"on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4kls7"]
advance_mode = 2
advance_condition = &"dash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fm4kb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_18id7"]
advance_mode = 2
advance_condition = &"dash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_anju5"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pv245"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_leoxs"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ao2jt"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dptmn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qhudc"]
states/Air/node = SubResource("AnimationNodeStateMachine_qhcyd")
states/Air/position = Vector2(479, 100)
states/Ground/node = SubResource("AnimationNodeStateMachine_63t8k")
states/Ground/position = Vector2(282, 100)
states/Start/position = Vector2(155, 100)
states/Whip/node = SubResource("AnimationNodeAnimation_lkh0t")
states/Whip/position = Vector2(472, -24)
states/dash/node = SubResource("AnimationNodeAnimation_rmt7y")
states/dash/position = Vector2(293, -9)
transitions = ["Start", "Ground", SubResource("AnimationNodeStateMachineTransition_ai21q"), "Ground", "Air", SubResource("AnimationNodeStateMachineTransition_t0vck"), "Air", "Ground", SubResource("AnimationNodeStateMachineTransition_5bi8q"), "Ground", "dash", SubResource("AnimationNodeStateMachineTransition_4kls7"), "dash", "Ground", SubResource("AnimationNodeStateMachineTransition_fm4kb"), "Air", "dash", SubResource("AnimationNodeStateMachineTransition_18id7"), "dash", "Air", SubResource("AnimationNodeStateMachineTransition_anju5"), "Ground", "Whip", SubResource("AnimationNodeStateMachineTransition_pv245"), "Whip", "Ground", SubResource("AnimationNodeStateMachineTransition_leoxs"), "Air", "Whip", SubResource("AnimationNodeStateMachineTransition_ao2jt"), "Whip", "Air", SubResource("AnimationNodeStateMachineTransition_dptmn")]
graph_offset = Vector2(0, -97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mecwu"]
size = Vector2(16.2708, 2.66667)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_r6tt5")

[node name="ShakeCam" type="Camera2D" parent="."]
scale = Vector2(0.333333, 0.333333)
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("1_lk56t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_382qp")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.19209e-07, 9)
shape = SubResource("RectangleShape2D_pj7jh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uc18g")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_uc18g")
}
tree_root = SubResource("AnimationNodeStateMachine_qhudc")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dash = false
parameters/conditions/jump = false
parameters/conditions/on_floor = false
parameters/Air/conditions/falling = false
parameters/Air/conditions/is_double = false
parameters/Air/conditions/slam = false
parameters/Ground/conditions/idle = false
parameters/Ground/conditions/is_moving = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.411

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="CooldownTimer" type="Timer" parent="."]

[node name="Ponytail" type="Area2D" parent="."]
position = Vector2(0.333333, 9)
collision_layer = 2
collision_mask = 2
script = ExtResource("10_qfk5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ponytail"]
position = Vector2(8.19792, 0)
shape = SubResource("RectangleShape2D_mecwu")
disabled = true

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="body_entered" from="Ponytail" to="Ponytail" method="_on_body_entered"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
